--- a/FinalReport-copy.rmd
+++ b/FinalReport-copy.rmd
@@ -24,15 +24,16 @@ $H_0$ : Ones attitude towards capital punishment is independent of race.
 
 
 
-
 $H_A$ : Ones attitude towards capital punishment is dependent of race.
-
-
 
 
 # Methods
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method. Discuss what data manipulations may be needed for example subsetting or other binning procedures and what sort of graphical displays and inferential tools will be used!-->
+
+
+The data in this study is attitude towards capital punishment and the race of the individual. Both these variables used in this study are both considered categorical. 
+
 
 # Results
 
@@ -43,6 +44,24 @@ $H_A$ : Ones attitude towards capital punishment is dependent of race.
 ### Graphical Descriptive Results
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question. Bottom line is to explain the features of the graph that are relevant to conforming or departing to what is expected by your null hypothesis !-->
+
+
+
+```{r}
+dd2 <- GSS %>% group_by(RACE,CAPPUN) %>% summarize(count=n()) %>% mutate(prcnt=count/sum(count))
+
+basicC <- ggplot(dd2,aes(x=RACE,y=CAPPUN,fill=CAPPUN))
+basicC + geom_bar(stat="identity",position="dodge")
+#Now for percentage plot
+
+basicCC <- ggplot(dd2,aes(x=RACE,y=prcnt*100,fill=CAPPUN)) 
+basicCC + geom_bar(stat="identity", position = "dodge")
+```
+
+This graph shows that white and other races favor capitol punishment while blacks oppose.
+
+
+
 
 ### Numerical Descriptive Results
 
