--- a/FinalReport-copy.rmd
+++ b/FinalReport-copy.rmd
@@ -50,7 +50,7 @@ The data in this study is attitude towards capital punishment and the race of th
 ```{r}
 dd2 <- GSS %>% group_by(RACE,CAPPUN) %>% summarize(count=n()) %>% mutate(prcnt=count/sum(count))
 
-basicC <- ggplot(dd2,aes(x=RACE,y=CAPPUN,fill=CAPPUN))
+basicC <- ggplot(dd2,aes(x=RACE,y=count,fill=CAPPUN))
 basicC + geom_bar(stat="identity",position="dodge")
 #Now for percentage plot
 
@@ -71,18 +71,90 @@ rowPerc(table1)
 colPerc(table1)
 ```
 
-
-More than 65% of whites and other races favor capitol punishment.   
-
-More than 65% of blacks oppose capitol punishment.   
-
-it appears that there is a correlation between attitude towards capital punishment and race. 
+35% of blacks favor capital punishment. More than 65% of whites and other races favor capital punishment. More than 65% of blacks oppose capitol punishment It appears that there is a correlation between capital punishment and race.
 
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+fisherXY = function(x, y, confL = 0, printAll=FALSE){
+  # Inputs: 
+  #   x: factor variable, 2 levels
+  #   y: factor variable, n levels
+  # confL: confidence level, default = 0.95
+  #        print only those tables, results if p-value < (1-confL)
+  # printAll: overide the 'print only if p-value < (1-confL), and
+  #           print all tables and fisher test results
+  #
+  # Constraint:
+  #   x and y must be same length
+  #
+  # Outputs:
+  #   All 2x2 Fisher exact tests
+  
+  if(confL<0 || confL> 1){
+    print('error: confL must be between 0 and 1')
+    return(999)
+  }
+  
+  if(!is.factor(x)) x=as.factor(x)
+  if(!is.factor(y)) y=as.factor(y)
+  
+  fisherTable = as.matrix(table(x, y))
+  cat('\ncontingency table:\n')
+  print(fisherTable)
+  cat('\n***All 2X2 tests****\n\n')
+
+  # all 2x2 tests
+  levelsY = levels(y)
+  levelsX = levels(x)
+  
+  m = length(levelsX)
+  n = length(levelsY)
+  
+  confLevel = 0.95
+  if (confL !=0 ) confLevel=confL
+  
+  for (i in 1:(m-1))
+       for(j in ((i+1):m))
+          for (k in 1:(n-1))
+             for (l in ((k+1):n)) {
+                
+                 fisherIndexX = c(i,j)
+                 fisherIndexY = c(k,l)
+                 
+                 fTempTable = as.matrix(fisherTable[fisherIndexX,
+                                        fisherIndexY])
+                 
+                 fisherTest=fisher.test(fTempTable, conf.int = TRUE, 
+                              conf.level = confLevel)
+                 
+                 if((fisherTest$p.value < (1-confLevel) ) || printAll){
+                   
+                       print(c(levelsX[i], levelsX[j]))
+                       print(c(levelsY[k], levelsY[l]))
+                       print(fTempTable)
+                       print(fisherTest)
+                       cat('\n')
+                 }
+                 
+        }
+}
+
+```
+```{r}
+fisherXY(GSS$RACE,GSS$CAPPUN,printAll = T)
+```
+
+This data shows that between white and other races there is not much of a difference with a P-value of 0.27. There is an extreme difference between white and blacks with the P value of 0.0016.There is also an extreme difference between blacks and other races with the P value of 0.002022
+
+
 
 # Discussion and Conclusion
+
+The data shows that there is an extreme difference with the attitude toward capital punishment and races, However the difference is not evident with all races. Whites and other races are close in percentage of being in favor of capitol punishment.Moreover Blacks attitude toward capital punishment is a less percentage then both. In conclusion since the numbers do not correlate We reject the Null Hypothesis. 
+
+
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
